--- a/signup/signup/src/main/resources/application.properties
+++ b/signup/signup/src/main/resources/application.properties
@@ -9,6 +9,11 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.session.jdbc.initialize-schema=never
 spring.session.store-type=none
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.session.SessionAutoConfiguration
+
 
 server.port=9001
+
+springdoc.swagger-ui.path=/docs
