--- a/login/src/main/resources/application.properties
+++ b/login/src/main/resources/application.properties
@@ -1,10 +1,18 @@
 spring.application.name=login
-spring.datasource.url=jdbc:mysql://localhost:3306/automotive_login_db?createDatabaseIfNotExist=true
+# MySQL Datasource Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/automotive_service_center?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=Abhinav15@
+spring.datasource.password=12345678
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
-springdoc.swagger-ui.path=/swagger-ui.html
-jwt.secret=Z3VYkVn1gXnKm8b7tZCqkD4xQ2m9W8l7pC1yV0hQ3fE=
-jwt.expiration=86400000
+
+# JPA/Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.session.store-type=none
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.session.SessionAutoConfiguration
+
+
+server.port=9002
+
+springdoc.swagger-ui.path=/docs
