Added Login Bug Fix, Eureka Server and made Login and Signup as Eureka Clients

--- a/signup/signup/src/main/resources/application.properties
+++ b/signup/signup/src/main/resources/application.properties
@@ -17,3 +17,14 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.session.Sess
 server.port=9001
 
 springdoc.swagger-ui.path=/docs
+
+eureka.client.service-url.defaultZone=http://localhost:9000/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.instance.prefer-ip-address=true
+eureka.client.unregister-on-shutdown=false
+
+# Make the client tell Eureka it wants to stay in the registry longer
+eureka.instance.lease-renewal-interval-in-seconds=30
+eureka.instance.lease-expiration-duration-in-seconds=90
+eureka.client.healthcheck.enabled=true
