Developed email service

--- a/signup/signup/src/main/resources/application.properties
+++ b/signup/signup/src/main/resources/application.properties
@@ -13,6 +13,8 @@ spring.session.jdbc.initialize-schema=never
 spring.session.store-type=none
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.session.SessionAutoConfiguration
 
+#email service details
+email-url=http://localhost:9003/api/email/signup
 
 server.port=9001
 
