Added default cors support in all services, completed vehicle service booking with email sender

--- a/customer/customer/src/main/resources/application.properties
+++ b/customer/customer/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=customer service
-server.port=9004
+server.port=9005
 # MySQL Datasource Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/automotive_service_center?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
@@ -14,3 +14,19 @@ spring.session.store-type=none
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.session.SessionAutoConfiguration
 
 springdoc.swagger-ui.path=/docs
+
+#cors-origin
+react-origin=http://localhost:5173
+
+eureka.client.service-url.defaultZone=http://localhost:9000/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.instance.prefer-ip-address=true
+eureka.client.unregister-on-shutdown=false
+
+# Make the client tell Eureka it wants to stay in the registry longer
+eureka.instance.lease-renewal-interval-in-seconds=30
+eureka.instance.lease-expiration-duration-in-seconds=90
+eureka.client.healthcheck.enabled=true
+
+email-url=http://localhost:9003/api/email/service
