--- a/email-service/email-service/src/main/resources/application.properties
+++ b/email-service/email-service/src/main/resources/application.properties
@@ -24,3 +24,9 @@ eureka.client.unregister-on-shutdown=false
 eureka.instance.lease-renewal-interval-in-seconds=30
 eureka.instance.lease-expiration-duration-in-seconds=90
 eureka.client.healthcheck.enabled=true
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.cache=false
