--- a/login/login/src/main/resources/application.properties
+++ b/login/login/src/main/resources/application.properties
@@ -27,3 +27,6 @@ eureka.client.unregister-on-shutdown=false
 eureka.instance.lease-renewal-interval-in-seconds=30
 eureka.instance.lease-expiration-duration-in-seconds=90
 eureka.client.healthcheck.enabled=true
+
+#cors-origin
+react-origin=http://localhost:5173
