Added mechanic, call centre agent flow

--- a/service-manager/service-manager/src/main/resources/application.properties
+++ b/service-manager/service-manager/src/main/resources/application.properties
@@ -27,4 +27,4 @@ eureka.instance.lease-renewal-interval-in-seconds=30
 eureka.instance.lease-expiration-duration-in-seconds=90
 eureka.client.healthcheck.enabled=true
 
-email-url=http://localhost:9003/api/email/service
+email-url=http://localhost:9003/api/email/service/completed
