Add JWT authentication and tests

--- a/login/login/src/main/resources/application.properties
+++ b/login/login/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=login
 # MySQL Datasource Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/automotive_service_center?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.url=jdbc:mysql://localhost:3306/automotive_service_center?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost:3306/automotive_service_center?useSSL=false&serverTimezone=UTC
+spring.datasource.username=automotive_service_center
+spring.datasource.password=automotive_service_center
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate Configuration
@@ -30,3 +31,10 @@ eureka.client.healthcheck.enabled=true
 
 #cors-origin
 react-origin=http://localhost:5173
+
+# JWT Configuration
+# Secret key for JWT token signing (Base64 encoded, 256-bit minimum)
+# In production, use a strong secret key and store it securely (e.g., environment variable or secret management service)
+jwt.secret=I9OGIPNP5roQ+b1vdtwVDX9R59gjf9SF+teLOWXzduw=
+# JWT token expiration time in milliseconds (default: 86400000 = 24 hours)
+jwt.expiration=86400000
