--- a/signup/signup/src/main/resources/application.properties
+++ b/signup/signup/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=signup service
 # MySQL Datasource Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/automotive_service_center?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.url=jdbc:mysql://localhost:3306/automotive_service_center?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/automotive_service_center?useSSL=false&serverTimezone=UTC
+spring.datasource.username=automotive_service_center
+spring.datasource.password=automotive_service_center
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate Configuration
