--- a/mechanic service/mechanic-service/src/main/resources/application.properties
+++ b/mechanic service/mechanic-service/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=mechanic-service
 server.port=9007
 # MySQL Datasource Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/automotive_service_center?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.url=jdbc:mysql://localhost:3306/automotive_service_center?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost:3306/automotive_service_center?useSSL=false&serverTimezone=UTC
+spring.datasource.username=automotive_service_center
+spring.datasource.password=automotive_service_center
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate Configuration
@@ -28,3 +29,10 @@ eureka.instance.lease-expiration-duration-in-seconds=90
 eureka.client.healthcheck.enabled=true
 
 email-url=http://localhost:9003/api/email/service
+
+# JWT Configuration
+# Secret key for JWT token signing (Base64 encoded, 256-bit minimum)
+# In production, use a strong secret key and store it securely (e.g., environment variable or secret management service)
+jwt.secret=I9OGIPNP5roQ+b1vdtwVDX9R59gjf9SF+teLOWXzduw=
+# JWT token expiration time in milliseconds (default: 86400000 = 24 hours)
+jwt.expiration=86400000
