--- a/customer/customer/customer/src/main/resources/application.properties
+++ b/customer/customer/customer/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.application.name=customer service
+spring.application.name=customer-service
 server.port=9005
 # MySQL Datasource Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/automotive_service_center?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 #spring.datasource.url=jdbc:mysql://localhost:3306/automotive_service_center?useSSL=false&serverTimezone=UTC
-spring.datasource.username=automotive_service_center
-spring.datasource.password=automotive_service_center
+spring.datasource.username=root
+spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate Configuration
