--- a/login/login/src/main/resources/application.properties
+++ b/login/login/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=login
 # MySQL Datasource Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/automotive_service_center?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 #spring.datasource.url=jdbc:mysql://localhost:3306/automotive_service_center?useSSL=false&serverTimezone=UTC
-spring.datasource.username=automotive_service_center
-spring.datasource.password=automotive_service_center
+spring.datasource.username=root
+spring.datasource.password=12345678
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate Configuration
@@ -31,6 +31,8 @@ eureka.client.healthcheck.enabled=true
 
 #cors-origin
 react-origin=http://localhost:5173
+react-origin-2=http://localhost:5171
+react-origin-3=http://localhost:5172
 
 # JWT Configuration
 # Secret key for JWT token signing (Base64 encoded, 256-bit minimum)
