--- a/mechanic service/mechanic-service/src/main/resources/application.properties
+++ b/mechanic service/mechanic-service/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.port=9007
 # MySQL Datasource Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/automotive_service_center?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 #spring.datasource.url=jdbc:mysql://localhost:3306/automotive_service_center?useSSL=false&serverTimezone=UTC
-spring.datasource.username=automotive_service_center
-spring.datasource.password=automotive_service_center
+spring.datasource.username=root
+spring.datasource.password=12345678
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate Configuration
@@ -15,7 +15,7 @@ spring.session.store-type=none
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.session.SessionAutoConfiguration
 
 #cors-origin
-react-origin=http://localhost:5173
+react-origin=http://localhost:5172
 
 eureka.client.service-url.defaultZone=http://localhost:9000/eureka
 eureka.client.register-with-eureka=true
@@ -28,7 +28,8 @@ eureka.instance.lease-renewal-interval-in-seconds=30
 eureka.instance.lease-expiration-duration-in-seconds=90
 eureka.client.healthcheck.enabled=true
 
-email-url=http://localhost:9003/api/email/service
+
+email-url=http://localhost:9003/api/email/service/completed
 
 # JWT Configuration
 # Secret key for JWT token signing (Base64 encoded, 256-bit minimum)
