--- a/service-manager/service-manager/src/main/resources/application.properties
+++ b/service-manager/service-manager/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.port=9006
 # MySQL Datasource Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/automotive_service_center?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 #spring.datasource.url=jdbc:mysql://localhost:3306/automotive_service_center?useSSL=false&serverTimezone=UTC
-spring.datasource.username=automotive_service_center
-spring.datasource.password=automotive_service_center
+spring.datasource.username=root
+spring.datasource.password=12345678
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate Configuration
@@ -28,7 +28,7 @@ eureka.instance.lease-renewal-interval-in-seconds=30
 eureka.instance.lease-expiration-duration-in-seconds=90
 eureka.client.healthcheck.enabled=true
 
-email-url=http://localhost:9003/api/email/service/completed
+email-url=http://localhost:9003/api/email/service/completed/service-manager
 
 # JWT Configuration
 # Secret key for JWT token signing (Base64 encoded, 256-bit minimum)
