--- a/signup/signup/src/main/resources/application.properties
+++ b/signup/signup/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=signup service
 spring.datasource.url=jdbc:mysql://localhost:3306/automotive_service_center?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/automotive_service_center?useSSL=false&serverTimezone=UTC
-spring.datasource.username=automotive_service_center
-spring.datasource.password=automotive_service_center
+spring.datasource.username=root
+spring.datasource.password=12345678
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate Configuration
@@ -34,4 +34,4 @@ eureka.instance.lease-expiration-duration-in-seconds=90
 eureka.client.healthcheck.enabled=true
 
 #cors-origin
-react-origin=http://localhost:5173
+react-origin=http://localhost:5170
